--- a/index.html
+++ b/index.html
@@ -6,21 +6,22 @@
   </head>
 
 <body>
-<img src="images/csg4ed-small.png" alt="Enhancing Social Good in Computing"
+<div class="navbar-container">
+  <nav>
 <!-- Site navigation menu -->
-<ul class="navbar">
-  <li><a href="index.html">Home page</a>
-  <li><a href="misc/topic.html">Technology/Topic</a>
-	<li><a href="misc/opportunities.html">Opportunities</a>
-	<li><a href="misc/risks.html">Risks</a>
-	<li><a href="misc/choices.html">Choices</a>
-	<li><a href="misc/ethics.html">Ethical Reflections</a>
-	<li><a href="misc/references.html">References</a>
-   <li><a href="misc/process.html">Process Support</a>
-</ul>
+  <a href="index.html">Home page</a>
+  <a href="misc/topic.html">Technology/Topic</a>
+	<a href="misc/opportunities.html">Opportunities</a>
+	<a href="misc/risks.html">Risks</a>
+	<a href="misc/choices.html">Choices</a>
+	<a href="misc/ethics.html">Ethical Reflections</a>
+	<a href="misc/references.html">References</a>
+   <a href="misc/process.html">Process Support</a>
 
+  </nav>
+</div>
 <!-- Main content -->
-<h1>CTiS: Impact of Technology Site</h1>
+<h1>AI-Generated Music</h1>
 
 
 </ul><p>This mock-up site is intended to support your team project so you can take this as a set of files and as a starting point and adapt it to your preference. 
@@ -30,11 +31,7 @@ It has some default links, which you can take as a start for your site structure
 
 
 <!-- Sign and date the page, it's only polite! -->
-<address>Made 1 March 2021<br>
-  by Tony Clear.</address>
- 
-<p><em>thanks to W3C for tutorial and adapted code from <a href="https://www.w3.org/Style/Examples/011/firstcss.en.html">Style Examples</a></p></em>
-<p><em>also thanks to WDN for HTML and CSS resources and any adapted code snippets from <a href= "https://developer.mozilla.org/en-US/docs/Web">Mozilla Developer Network</a></p></em 
- 
+<address>Made 4 June 2023<br>
+  by Group 0509</address>
 </body>
 </html>
