--- a/misc/ethics.html
+++ b/misc/ethics.html
@@ -2,23 +2,26 @@
 <html>
 <head>
   <title>ethics</title>
-  	<link rel="stylesheet" href="../styles/minimal-table.css">
+  	<link rel="stylesheet" href="../styles/mystyles.css">
   </head>
 
 <body>
-<img src="../images/csg4ed-small.png" alt="Enhancing Social Good in Computing"
+
 <!-- Site navigation menu -->
 
-<ul class="navbar">
-  <li><a href="../index.html">Home page</a>
-  <li><a href="topic.html">Technology/Topic</a>
-	<li><a href="opportunities.html">Opportunities</a>
-	<li><a href="risks.html">Risks</a>
-	<li><a href="choices.html">Choices</a>
-	<li><a href="ethics.html">Ethical Reflections</a>
-	<li><a href="references.html">References</a>
-   <li><a href="process.html">Process Support</a>
-</ul>
+<div class="navbar-container">
+	<nav>
+	<a href="../index.html">Home page</a>
+	<a href="topic.html">Technology/Topic</a>
+	  <a href="opportunities.html">Opportunities</a>
+	  <a href="risks.html">Risks</a>
+	  <a href="choices.html">Choices</a>
+	  <a href="ethics.html">Ethical Reflections</a>
+	  <a href="references.html">References</a>
+	 <a href="process.html">Process Support</a>
+  </nav>
+  </div>
+
 </body>
 <!-- Main content -->
 <h1>Ethical Issues and Reflections</h1>
@@ -75,10 +78,7 @@
   <hr/>
 <p><h6><em>Note: you can replace the Link to Canvas Comp501 with a'hard coded' link to your personal repository in this form or equivalent.</p></h6></em> 
 
-<!-- Sign and date the page, it's only polite! -->
-<address>Made 1 March 2021<br>
-  by Tony Clear.</address>
- 
-<p><em>thanks to W3C for tutorial and adapted code from <a href="https://www.w3.org/Style/Examples/011/firstcss.en.html">Style Examples</a></p></em>
-<p><em>also thanks to WDN for HTML and CSS resources and any adapted code snippets from <a href= "https://developer.mozilla.org/en-US/docs/Web">Mozilla Developer Network</a></p></em 
- </html>
+<address>Made 4 June 2023<br>
+	by Group 0509</address>
+  </body>
+  </html>
