--- a/misc/process.html
+++ b/misc/process.html
@@ -6,7 +6,7 @@
   </head>
 
 <body>
-<img src="../images/csg4ed-small.png" alt="Enhancing Social Good in Computing"
+
 <!-- Site navigation menu -->
 
 <!-- Main content -->
@@ -14,16 +14,18 @@
 
 <p>Your team project has several stages, and the assignment process is supported by the linked resources in this mock-up site.
 
-<ul class="navbar">
-  <li><a href="../index.html">Home page</a>
-  <li><a href="team-formation.html">Team Formation</a>
-   <li><a href="proposal.html">Topic Proposal</a>
-	<li><a href="evaluation.html">Peer Evaluation</a>
-	<li><a href="meetings.html">Meeting Minutes</a>
-	<li><a href="portfolio.html">Project Portfolio</a>
-		<li><a href="rubric.html">Assessment Rubric</a>
-	<li><a href="guidelines.html">Guideline Conformance</a>
-   <li><a href="process.html">Process Support</a>
+  <div class="navbar-container">
+    <nav>
+    <a href="../index.html">Home page</a>
+    <a href="topic.html">Technology/Topic</a>
+    <a href="opportunities.html">Opportunities</a>
+    <a href="risks.html">Risks</a>
+    <a href="choices.html">Choices</a>
+    <a href="ethics.html">Ethical Reflections</a>
+    <a href="references.html">References</a>
+     <a href="process.html">Process Support</a>
+     </div>
+    </nav
    
 </ul><p>This mock-up site is intended to support your team project so you can take this as a set of files and as a starting point and adapt it to your preference.</p>
 <p>It is built on a W3C site tutorial so does not claim to be flash, but now has an image, not well presented, but at least the site uses HTML and has been styled with CSS &hellip;</p>
@@ -31,12 +33,9 @@
 
 
 
-<!-- Sign and date the page, it's only polite! -->
-<address>Made 1 March 2021<br>
-  by Tony Clear.</address>
- 
-<p><em>thanks to W3C for tutorial and adapted code from <a href="https://www.w3.org/Style/Examples/011/firstcss.en.html">Style Examples</a></p></em>
-<p><em>also thanks to WDN for HTML and CSS resources and any adapted code snippets from <a href= "https://developer.mozilla.org/en-US/docs/Web">Mozilla Developer Network</a></p></em 
-  
+<address>Made 4 June 2023<br>
+  by Group 0509</address>
+
+
 </body>
 </html>
