--- a/misc/risks.html
+++ b/misc/risks.html
@@ -6,19 +6,21 @@
   </head>
 
 <body>
-<img src="../images/csg4ed-small.png" alt="Enhancing Social Good in Computing"
+
 <!-- Site navigation menu -->
 
-<ul class="navbar">
-  <li><a href="../index.html">Home page</a>
-  <li><a href="topic.html">Technology/Topic</a>
-	<li><a href="opportunities.html">Opportunities</a>
-	<li><a href="misc/risks.html">Risks</a>
-	<li><a href="choices.html">Choices</a>
-	<li><a href="ethics.html">Ethical Reflections</a>
-	<li><a href="references.html">References</a>
-   <li><a href="process.html">Process Support</a>
-</ul>
+<div class="navbar-container">
+  <nav>
+  <a href="../index.html">Home page</a>
+  <a href="topic.html">Technology/Topic</a>
+	<a href="opportunities.html">Opportunities</a>
+	<a href="risks.html">Risks</a>
+	<a href="choices.html">Choices</a>
+	<a href="ethics.html">Ethical Reflections</a>
+	<a href="references.html">References</a>
+   <a href="process.html">Process Support</a>
+   </div>
+  </nav>
 
 <!-- Main content -->
 <h1>Technology Risks</h1>
@@ -26,10 +28,7 @@
 
 </ul><h4><p>The page or area describing the risks posed by your chosen technology/topic.<p></h4>
 
-<!-- Sign and date the page, it's only polite! -->
-<address>Made 1 March 2021<br>
-  by Tony Clear.</address>
- 
-<p><em>thanks to W3C for tutorial and adapted code from <a href="https://www.w3.org/Style/Examples/011/firstcss.en.html">Style Examples</a></p></em>
-<p><em>also thanks to WDN for HTML and CSS resources and any adapted code snippets from <a href= "https://developer.mozilla.org/en-US/docs/Web">Mozilla Developer Network</a></p></em 
- </html>
+  <address>Made 4 June 2023<br>
+    by Group 0509</address>
+  </body>
+  </html>
