--- a/misc/topic.html
+++ b/misc/topic.html
@@ -6,20 +6,21 @@
   </head>
 
 <body>
-<img src="../images/csg4ed-small.png" alt="Enhancing Social Good in Computing"
+
 <!-- Site navigation menu -->
 
-<ul class="navbar">
-  <li><a href="../index.html">Home page</a>
-  <li><a href="topic.html">Technology/Topic</a>
-	<li><a href="opportunities.html">Opportunities</a>
-	<li><a href="risks.html">Risks</a>
-	<li><a href="choices.html">Choices</a>
-	<li><a href="ethics.html">Ethical Reflections</a>
-	<li><a href="references.html">References</a>
-   <li><a href="process.html">Process Support</a>
-</ul>
-
+<div class="navbar-container">
+  <nav>
+  <a href="../index.html">Home page</a>
+  <a href="topic.html">Technology/Topic</a>
+	<a href="opportunities.html">Opportunities</a>
+	<a href="risks.html">Risks</a>
+	<a href="choices.html">Choices</a>
+	<a href="ethics.html">Ethical Reflections</a>
+	<a href="references.html">References</a>
+   <a href="process.html">Process Support</a>
+</nav>
+</div>
 <!-- Main content -->
 <h1>Chosen Technology/Topic</h1>
 
@@ -30,12 +31,9 @@
 <p><em>E.g. What is the level of analysis - culture or organization; Responsibility - individual or pro fessional; Ethical issue - power or equity; Technology - medical, nuclear, mobile?</p></em>
 <img src="../images/martin_miller_1996_small.png" alt="Social and Ethical Impact of Computing"
 </ul><h6><p>ex. Martin, C. D., Huff, C., Gotterbarn, D., & Miller, K. (1996). A framework for implementing and teaching the social and ethical impact of computing. Education and Information Technologies, 1(2), 101-122.<p></h6>
-<!-- Sign and date the page, it's only polite! -->
-<address>Made 1 March 2021<br>
-  by Tony Clear.</address>
- 
-<p><em>thanks to W3C for tutorial and adapted code from <a href="https://www.w3.org/Style/Examples/011/firstcss.en.html">Style Examples</a></p></em>
-<p><em>also thanks to WDN for HTML and CSS resources and any adapted code snippets from <a href= "https://developer.mozilla.org/en-US/docs/Web">Mozilla Developer Network</a></p></em 
- 
+
+
+<address>Made 4 June 2023<br>
+  by Group 0509</address>
 </body>
 </html>
