--- a/misc/risks.html
+++ b/misc/risks.html
@@ -23,7 +23,7 @@
   </nav>
 
 <!-- Main content -->
-<h1>Technology Risks</h1>
+<h1>Risks Of AI-Generated Music</h1>
 
 
 </ul><h4><p>The page or area describing the risks posed by your chosen technology/topic.<p></h4>
