Implemented Content on topic and risks

--- a/misc/topic.html
+++ b/misc/topic.html
@@ -22,16 +22,14 @@
 </nav>
 </div>
 <!-- Main content -->
-<h1>Chosen Technology/Topic</h1>
+<h1>AI-Generated Music</h1>
 
 
-</ul><h5><p>The page or area describing your chosen technology/topic and why it is significant and/or has important implications for society.<p></h5>
+</ul><h3><p>What is AI-Generated Music?<p></h3>
 
-<p><em>When deciding on your chosen technology/topic, it is best not to choose something too broad, but limit the focus e.g. consider the level of social analysis from the figure below.</p></em>
-<p><em>E.g. What is the level of analysis - culture or organization; Responsibility - individual or pro fessional; Ethical issue - power or equity; Technology - medical, nuclear, mobile?</p></em>
-<img src="../images/martin_miller_1996_small.png" alt="Social and Ethical Impact of Computing"
-</ul><h6><p>ex. Martin, C. D., Huff, C., Gotterbarn, D., & Miller, K. (1996). A framework for implementing and teaching the social and ethical impact of computing. Education and Information Technologies, 1(2), 101-122.<p></h6>
-
+<p>Artificial Intelligence is defined as “a wide-ranging branch of computer science concerned with building smart machines capable of performing tasks that typically require human intelligence” (Rekdal, 2023). In recent years, Artificial Intelligence has evolved as a composing tool, enabling artists to uncover new sounds generated from AI algorithms and software. In this rapidly evolving technological environment, we propose to investigate the impacts of AI-generated music on music production and creation.</p>
+<p>What does it mean to expedite and streamline the creation of music? How will AI impact artists, record labels, and fans? AI-generated music is used to mimic and augment human creativity by leveraging data and algorithms to generate original or innovative music. Seeing that music is a significant part of most people’s lives, uniting artists and people together, we are interested in the opportunities, risks and choices of implementation in society that it could bring forth. This topic is crucial in the new era of artificial intelligence, since it has the potential to influence and 
+  modernise the industry of music, particularly among the younger generation and up-and-coming artists who are exposed to this technology. It also poses threats to record- labels and existing artists who may come across to legal and/or ethical challenges. The preservation of authentic music production is important for our generation as it may influence the forthcoming generations</p>
  
 <address>Made 4 June 2023<br>
   by Group 0509</address>
