--- a/misc/risks.html
+++ b/misc/risks.html
@@ -22,6 +22,7 @@
    </div>
   </nav>
 
+  <div class="container">
 <!-- Main content -->
 <h1>Risks Of AI-Generated Music</h1>
 
@@ -81,7 +82,7 @@
       in human-crafted music. Furthermore, craftsmanship in music extends beyond technical aspects to encompass interpretation and emotional delivery. Human musicians 
       infuse their performances with personal experiences, emotions, and interpretations, establishing a profoundly human connection with audiences. AI-generated music, 
       lacking such personal touch and lived experiences, may struggle to replicate the profound emotional impact achieved through human craftsmanship. </p>
- 
+ </div>
   <address>Made 4 June 2023<br>
     Written by Salman Tahir</address>
   </body>
