Changed Technology/topic page

--- a/misc/topic.html
+++ b/misc/topic.html
@@ -21,16 +21,25 @@
    <a href="process.html">Process Support</a>
 </nav>
 </div>
+
+<div class="container">
 <!-- Main content -->
-<h1>AI-Generated Music</h1>
+<h1>AI-Generated Music </h1>
+<img src="../images/topic-aiwaves.jpg" alt="AIMUSIC" width="650px">
+<h2>A Technology Topic - Group: 0509 </h2>
+
 
 
 </ul><h3><p>What is AI-Generated Music?<p></h3>
 
 <p>Artificial Intelligence is defined as “a wide-ranging branch of computer science concerned with building smart machines capable of performing tasks that typically require human intelligence” (Rekdal, 2023). In recent years, Artificial Intelligence has evolved as a composing tool, enabling artists to uncover new sounds generated from AI algorithms and software. In this rapidly evolving technological environment, we propose to investigate the impacts of AI-generated music on music production and creation.</p>
-<p>What does it mean to expedite and streamline the creation of music? How will AI impact artists, record labels, and fans? AI-generated music is used to mimic and augment human creativity by leveraging data and algorithms to generate original or innovative music. Seeing that music is a significant part of most people’s lives, uniting artists and people together, we are interested in the opportunities, risks and choices of implementation in society that it could bring forth. This topic is crucial in the new era of artificial intelligence, since it has the potential to influence and 
-  modernise the industry of music, particularly among the younger generation and up-and-coming artists who are exposed to this technology. It also poses threats to record- labels and existing artists who may come across to legal and/or ethical challenges. The preservation of authentic music production is important for our generation as it may influence the forthcoming generations</p>
- 
+<p>What does it mean to expedite and streamline the creation of music? How will AI impact artists, record labels, and fans? </p>
+<p> AI-generated music is used to mimic and augment human creativity by leveraging data and algorithms to generate original or innovative music. Seeing that music is a significant part of most people’s lives, uniting artists and people together, we are interested in the opportunities, risks and choices of implementation in society that it could bring forth.  </p>
+<p>This topic is crucial in the new era of artificial intelligence, since it has the potential to influence and modernise the industry of music, particularly among the younger generation and up-and-coming artists who are exposed to this technology. It also poses threats to record- labels and existing artists who may come across to legal and/or ethical challenges. The preservation of authentic music production is important for our generation as it may influence the forthcoming generations  </p>
+
+
+  </div>
+
 <address>Made 4 June 2023<br>
   by Group 0509</address>
 </body>
