--- a/misc/choices.html
+++ b/misc/choices.html
@@ -22,13 +22,74 @@
    </div>
   </nav>
 
+  <div class="container">
 <!-- Main content -->
-<h1>Technology Choices</h1>
+<h1>Choices of AI-Generated Music</h1>
+
+<img src="../images/choices.jpg" alt="AIMUSIC" width="550px">
+<h2>AI-Generated Music: Choices Available for its Design and Implementation in Society</h2>
 
 
-</ul><h4><p>The page or area describing the choices available to us through or by your chosen technology/topic.<p></h4>
+<p>AI-Generated Music is created using algorithms and software programmes that can analyse and create music. It can be utilised to produce a wide range of musical genres and styles in a variety of different contexts. It has the potential to expedite a new world of creativity, modernise the way music is created, as well as providing a profound way of experimenting and experiencing music creation that is far more complicated than what a human musician could create (Carter, 2023).  
+ 
+
+  Evidently, AI technology will continue to grow at a remarkable pace, putting society in a position to assess the various possibilities that can shape the design and implementation of AI-generated music. Therefore, it is important to navigate the unfamiliar territory that exists between record labels acceptance of AI-generated music and the incorporation of AI artists alongside real-artists, to ensure appropriate and ethical use of this new technology.  
+  
+    
+  
+  The rise of AI-generated music and its impact on the music industry has ultimately led to discussions on how to achieve an honest balance between human creativity and AI-driven innovation. If this is challenged by those who use it, it is important that we carefully consider the possible consequences and implications for the future of music. </p>
+
+
+
+  <p>Evidently, AI technology will continue to grow at a remarkable pace, putting society in a position to assess the various possibilities that can shape the design and implementation of AI-generated music. Therefore, it is important to navigate the unfamiliar territory that exists between record labels acceptance of AI-generated music and the incorporation of AI artists alongside real-artists, to ensure appropriate and ethical use of this new technology.  </p>
+
+
+<p>The rise of AI-generated music and its impact on the music industry has ultimately led to discussions on how to achieve an honest balance between human creativity and AI-driven innovation. If this is challenged by those who use it, it is important that we carefully consider the possible consequences and implications for the future of music. </p>
+
+<h2>AI Artists Collaborating with Real Artists</h2>
+
+<p>AI-Generated music has created an opening for AI artists to imitate the genre, style, and voice of real artists. With easily accessible AI technology online, users can upload an artist’s vocals to an AI generator and use autotuning techniques to achieve the perfect pitch. Without input or involvement from the actual artist, AI artists can release and claim the work to themselves, taking advantage of AI technology’s capabilities in the creation of music.</p>
+
+<p>For example, the song originally created and released by Ghostwriter977, “Drake AI – Heart On My Sleeve feat The Weeknd AI”, has gained over a million views on YouTube (Snapshot Edits, 2023). Despite potentially misleading Drake’s fans, the song quickly gained popularity. Numerous reaction videos were posted online, fans expressing their opinions and amazement at the quality and resemblance of “AI Drake” to the “real Drake”. This example communicates the power of AI-generated music and its ability to push limitations to inspire new music. However, record labels and artists, whose property and/or voice were used illegitimately, may not feel the same way. In another situation, Drake’s voice was used to cover Ice Spice’s Munch, a song you would never picture the artist singing in real life. He was quick to respond on Instagram, saying, “This is the last straw”. Expressing their irritation, Universal Music Group spoke up against the AI-generated cover, demanding Spotify, and other streaming services to remove AI versions of their artists and their copyright songs (Harris, 2023). Their reaction is reasonable as they ask for the protection of their rights and the rights of their artists and put a stop to illegal use of their music. In doing so, platforms refrain from sharing content that breaches these rights.  </p>
+
+<p>This serves as a small glimpse into the possible implications of utilising AI-generated music without implementing appropriate measures. This example showcases how the free-for-all use of AI-generated music can result in significant consequences, ultimately highlighting the need to lessen the potential risks and protect the rights of artists.  The use of AI-generated music raises questions when it comes to imitating artists, that users must keep in mind. Do artists own the sound of their voice or do record labels own the sound of the artists’ voice. Nonetheless, this advanced technology is here to stay. </p>
+
+<p>Therefore, collaboration between AI artists and real artists is an option that holds great promise for the integration of AI-generated music into society. Individuals who have an interest in creating music via AI algorithms, have the ethical responsibility to seek out permission from the artist they wish to replicate in their song(s) and provide them with respectful payment, if released. The Canadian musician, Grimes, took to twitter to voice her opinion on this matter, commenting on social media, “I'll split 50% royalties on any successful AI-generated song that uses my voice.” (Beato, 2023). Some artists, who are not signed with record labels and have no legal bindings may find this approach advantageous for their career and financial wellbeing. It also communicates the way in which successful and mutual collaboration can result in new processes and unique musical experiences. By seeking permission, AI artists can fairly claim the work as their own, without the possibly of facing severe consequences from record labels or the artists themselves.</p>
+
+
+<h2>Establishment of Appropriate Guidelines and Standards</h2>
+
+<p>To ensure responsible and ethical use of AI-generated music, appropriate guidelines and standards are necessary to direct the design and implementation of AI-generated music in society.  </p>
+
+<p>Guidelines can “streamline certain processes according to what the best practices are.” Guidelines may provide flexibility for unexpected circumstances and are open to interpretation for the user (Spoden, 2017). Standards, on the other hand, are necessary courses of action or guidelines that provide official policies with support and guidance. They are used to indicate expected behaviour and must be strictly enforced to be beneficial (Spoden, 2017).  </p>
+
+<p>In the context of AI-generated music, proper guidelines and standards can help address important topics surrounding copyright and ownership of music compositions. They can provide a structure for determining who the rightful creator is and address any potential legal and ethical consequences that may surface from using these kinds of technology. However, questions related to the originality of their work should be taken into consideration, as well as the extent of their input, as well as the rights of the real artist involved. It can help to ensure that all parties involved receive adequate compensation and recognition to maintain a healthy and balanced implementation of AI-generated music.  </p>
+
+<p>When creating music, some AI artists dive into problematic and potentially harmful territory by stealing another artist's voice and style without their permission. To protect the artist’s interests, it becomes essential to develop effective AI systems that can identify and respond to suspected copyright infringements, eliminating unexpected consequences. This system should integrate an algorithm that can uncover whether the AI-generated composition has been granted permission to use specific elements, such as voice samples, and identify the sources of any voice generators used. By adding such protections, it can ensure all rights are respected. </p>
+
+<h2>Streaming Services for AI Artists </h2>
+
+<p>The creation of dedicated streaming services solely for AI artists has the potential to influence the music industry and encourage this form of music composition. Establishing a specialised platform, that is designed to display and promote the work of AI artists, offers a promising solution to challenges surrounding copyright.  </p>
+
+<p>To address these concerns related to unofficial use of artist’s voices, streaming services can create platforms for AI versions of real artists. It permits them to upload their music to the public, whilst clearly revealing whose voice and style was used in the song. Consequently, streaming services can ensure appropriate compensation by paying the artists or record labels who hold the legal rights to elements used in the AI-generated composition. Without such platform, AI artists are uploading their music onto platforms such as YouTube and TikTok, which can be taken down for copyright infringement if it is viewed as unauthorized use of the artist's property.  </p>
+
+<p>Ultimately streaming services have a legal obligation to protect the rights of artists. By providing a dedicated platform for AI-generated music, they can play a fundamental role in legitimizing and promoting this emerging form of technology and artistic expression all while ensuring fair treatment and compensation for all parties involved.   </p>
+
+<h2>Producers and Songwriters using AI to Experiment with Different Artist Vocals.</h2>
+
+<p>An article written by Griffin Brown, discusses the way in which producers collaborate to create new music. He states, “One producer likely reaches out to another through social media… After deciding on a track, the rest of the collaborative process likely looks a bit like a tennis match. The first producer works on the track, then sends it off to the other. The second producer works for a bit, then sends it back. And so on and so on until the track is done.” (Brown, 2019). This method of collaboration lacks clear direction and strategy, and it reduces the true meaning of collaborative efforts because it occurs primarily in isolation. </p>
+
+<p>To ensure effective collaboration, artists can use AI-music generators to experiment with different vocals and sounds. The use of this technology nurtures a modern and innovative approach to music collaboration, ultimately streamlining the decision-making process for producers and songwriters.  
+</p>
+
+<p>By combining this technology into the creative process, artists can test out unique and unconventional vocal sounds, and experiment with different artist collaborations, even autotuning to reimagine an artist’s vocals in different ways. These experimental methods allow artists to finalise the direction and vision of a song before engaging with specific artists or producers. An opportunity for feedback, improvements, and acceptance of collaboration can then be obtained by sharing song samples with the person they intend to work with.  </p>
+
+<p>Taking advantage of AI generated music in this way demonstrates a positive implementation of this technology in our society. It serves as a starting point, offering new creative possibilities for music creation that would not have been possible without the support of this technology. While it is undeniable that challenges may occur from the use of this technology, responsible and ethical use can result in the creation of true masterpieces that resonate with people. 
+
+</p>
+</div>
 
   <address>Made 4 June 2023<br>
-    by Group 0509</address>
+    Written by Sara Khalaf </address>
   </body>
   </html>
