--- a/misc/choices.html
+++ b/misc/choices.html
@@ -26,7 +26,7 @@
 <!-- Main content -->
 <h1>Choices of AI-Generated Music</h1>
 
-<img src="../images/choices.jpg" alt="AIMUSIC" width="550px">
+<img src="../images/choices.jpg" alt="choices" width="550px">
 <h2>AI-Generated Music: Choices Available for its Design and Implementation in Society</h2>
 
 
