--- a/misc/risks.html
+++ b/misc/risks.html
@@ -25,7 +25,7 @@
   <div class="container">
 <!-- Main content -->
 <h1>Risks Of AI-Generated Music</h1>
-
+<img src="../images/risks.jpg" alt="risks" width="600px">
 <h2>Introduction to Risks Posed</h2>
 <p>The emergence of advanced computational systems has revolutionised the music industry (Coleman, 2022), with AI-generated music capturing the attention of musicians and audiences. However, alongside the exciting possibilities, there are risks that deserve careful consideration. One significant concern is the potential dilution of human ingenuity and uniqueness in AI-generated music. There is a risk that the resulting compositions lack the distinct human touch and emotional depth valued in artistic expression. This could lead to a homogenisation of musical styles. Another pressing issue is intellectual property and copyright infringement (Reje,2022). AI algorithms trained on existing music may inadvertently produce compositions resembling copyrighted works, raising ethical and legal challenges. Determining the line between inspiration and plagiarism becomes increasingly complex when AI technology is involved. Furthermore, AI-generated music raises questions about the authenticity and intentionality of the artist. When compositions are entirely crafted by algorithms, the connection between the listener and the artist can be compromised. The artist's intent, emotions, and personal experiences may become obscured, potentially reducing the profound impact of the music. The risks associated with AI-generated music, including diminished human ingenuity, copyright issues, and compromised artist authenticity, highlight the need for careful consideration to ensure artistic integrity in the evolving landscape of music creation.  </p>
 
