changing ethics/references content

--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
 	<a href="misc/ethics.html">Ethical Reflections</a>
 	<a href="misc/references.html">References</a>
    <a href="misc/process.html">Process Support</a>
+   <a href="misc/proposal.html">Topic Proposal</a>
 
   </nav>
 </div>
 <!-- Main content -->
+
+<div class="container">
 <h1>AI-Generated Music</h1>
 
 
@@ -31,6 +34,8 @@ It has some default links, which you can take as a start for your site structure
 
 
 <!-- Sign and date the page, it's only polite! -->
+
+</div>
 <address>Made 4 June 2023<br>
   by Group 0509</address>
 </body>
