--- a/misc/opportunities.html
+++ b/misc/opportunities.html
@@ -19,6 +19,7 @@
 	<a href="ethics.html">Ethical Reflections</a>
 	<a href="references.html">References</a>
    <a href="process.html">Process Support</a>
+   <a href="proposal.html">Topic Proposal</a>
    </div>
   </nav>
 
