--- a/misc/proposal.html
+++ b/misc/proposal.html
@@ -2,27 +2,27 @@
 <html>
 <head>
   <title>"proposal" </title>
-  	<link rel="stylesheet" href="../styles/minimal-table.css">
+  	<link rel="stylesheet" href="../styles/mystyles.css">
   </head>
 
 
 <body>
-<img src="../images/csg4ed-small.png" alt="Enhancing Social Good in Computing"
 <!-- Site navigation menu -->
 
-<ul class="navbar">
-  <li><a href="../index.html">Home page</a>
-  <li><a href="team-formation.html">Team Formation</a>
-   <li><a href="proposal.html">Topic Proposal</a>
-	<li><a href="evaluation.html">Peer Evaluation</a>
-	<li><a href="meetings.html">Meeting Minutes</a>
-	<li><a href="portfolio.html">Project Portfolio</a>
-		<li><a href="rubric.html">Assessment Rubric</a>
-	<li><a href="guidelines.html">Guideline Conformance</a>
-   <li><a href="process.html">Process Support</a>
-   
-</ul>
+<div class="navbar-container">
+	<nav>
+	<a href="../index.html">Home page</a>
+	<a href="topic.html">Technology/Topic</a>
+	  <a href="opportunities.html">Opportunities</a>
+	  <a href="risks.html">Risks</a>
+	  <a href="choices.html">Choices</a>
+	  <a href="ethics.html">Ethical Reflections</a>
+	  <a href="references.html">References</a>
+	 <a href="process.html">Process Support</a>
+	 <a href="proposal.html">Topic Proposal</a>
+	 </div>
 
+	 <div class="container">
 <!-- Main content -->
 <h1>Project Technology/Topic Proposal</h1>
 
@@ -200,6 +200,8 @@
 
 <p><h4>TA name: ......................................., Date Proposal Approved:.../....../..........., </p></h4>
 
+
+</div>
 <!-- Sign and date the page, it's only polite! -->
 <address>Made 1 March 2021<br>
   by Tony Clear.</address>
