--- a/misc/references.html
+++ b/misc/references.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
 <head>
-  <title>references</title>
+  <title>References</title>
   	<link rel="stylesheet" href="../styles/mystyles.css">
   </head>
 
@@ -21,17 +21,43 @@
    <a href="process.html">Process Support</a>
    </div>
   </nav>
-
+  <div class="container">
 <!-- Main content -->
 <h1>References</h1>
 
+<h2>Technology/Topic:</h2>
+<p>Rekdal, A. (2023, May 19). What is artificial intelligence (AI)? How does AI work? Built 
+  In. https://builtin.com/artificial-intelligence </p>
 
-</ul><h4><p>The page or area listing the sources <em>(high quality refereed journal or conference articles - cited as APA formatted references)</em>
-and any web links to high quality resources supporting the arguments in your site.<p></h4>
 
-</ul><h4><p>An example of a cited reference:<p></h4>
+<h2>Opportunities:</h2>
+<p>American Music Therapy Association. (2020). History of Music Therapy. Musictherapy.org. https://www.musictherapy.org/about/history/#:~:text=The%20earliest%20known%20reference%20to </p>
+<p>Brown, A., Gifford, T., Wooller, R. (n.d.). Generative Music Systems for live performance - computationalcreativity.net. https://computationalcreativity.net/iccc2010/papers/brown-gifford-wooller.pdf </p>
+<p>Civit, M., Civit-Masot, J., Cuadrado, F., & Escalona, M. J. (2022). A systematic review of artificial intelligence-based music generation: Scope, applications, and future trends. Expert Systems with Applications, 209, 118190. https://doi.org/10.1016/j.eswa.2022.118190 </p>
+<p>Lamping, R. (2023, April 18). History of Spotify and AI. https://amt-lab.org/blog/2023/4/how-spotify-uses-ai#:~:text=Before%20developing%20DJ%2C%20Spotify%20used </p>
+<p>Mao, H., Shin, T., & Cottrell, G. (n.d.). DeepJ: Style-Specific Music Generation. https://arxiv.org/pdf/1801.00887.pdf </p>
+<p>Schedl, M., Bauer, C., Reisinger, W., Kowald, D., & Lex, E. (2020, November 30). Listener modelling and context-aware music recommendation based on country archetypes. Frontiers. https://www.frontiersin.org/articles/10.3389/frai.2020.508725/full </p>
+<p>Williams, D., Hodge, V. J., & Wu, C.-Y. (2020, October 19). On the use of AI for generation of functional music to improve mental health. Frontiers. https://www.frontiersin.org/articles/10.3389/frai.2020.497864/full </p>
+<p>Zhang, R., Mao, X., Li, L., Jiang, L., Chen, L., Hu, Z., Xi, Y., Fan, C., & Huang, M. (n.d.). Youling: an AI-Assisted Lyrics Creation System.  https://arxiv.org/pdf/2201.06724.pdf </p>
 
-</ul><h5><p>Baecker, R. M. (2019). Computers and society: Modern perspectives: Oxford University Press, USA.<p></h5>
+<h2>Risks:</h2>
+<p>Detweiler, Coleman, Diaz, Dom, L., Engel, Huang, ... & Zevenbergen, Coleman, B. (2022). Redefining Relationships in Music. arXiv preprint arXiv:2212.08038. </p>
+<p>Karlberg, P. (2022). What ethical dilemmas do AI music startups face? Uppsala University. Retrieved from https://www.diva-portal.org/smash/get/diva2:1684436/FULLTEXT01.pdf </p>
+<p>Reje, A. (2022). Ethical Risk Analysis of the Use of AI in Music Production (Dissertation). Retrieved from http://urn.kb.se/resolve?urn=urn:nbn:se:kth:diva-321589 /p>
+<p>Sturm, B. L. T., Iglesias, M., Ben-Tal, O., Miron, M., & Gómez, E. (2019). Artificial Intelligence and Music: Open Questions of Copyright Law and Engineering Praxis. Arts, 8(3), 115. MDPI AG. Retrieved from http://dx.doi.org/10.3390/arts8030115 </p>
+
+<h2>Choices:</h2>
+<p>Beato, R. (2023, May 5). The AI Effect: A New Era in Music and Its Unintended Consequences [Video]. YouTube. https://www.youtube.com/watch?v=-eAQOhDNLt4&t=601s </p>
+<p>Brown, G. (2019, January 10). How to Collaborate Effectively with Other Music Producers. izotope.com. https://www.izotope.com/en/learn/how-to-collaborate-effectively-with-other-music-producers.html </p>
+<p>Carter, G. (2023, March 13). AI Generated Music – The Future Of The Fall Of Creativity? musicgateway.com. https://www.musicgateway.com/blog/music-production/ai-generated-music-the-future-of-the-fall-of-creativity </p>
+<p>Harris, A. (2023, April 14). Drake responds to AI-generated cover of him rapping Ice Spice song. en.as.com. https://en.as.com/entertainment/drake-responds-to-ai-generated-cover-of-him-rapping-ice-spice-song-n/ </p>
+<p>Snapshot Edits. (2023, April 26). Drake AI - Heart On My Sleeve ft. The Weeknd AI (Official Music Video) [Video]. YouTube. https://www.youtube.com/watch?v=WldNcKLgzoM </p>
+<p>Spoden, C. (2017, August 22). Security Policies, Standards, Procedures, and Guidelines. frsecure.com. https://frsecure.com/blog/differentiating-between-policies-standards-procedures-and-guidelines/#:~:text=Guidelines%20are%20recommendations%20to%20users,be%20followed%20to%20the%20letter </p>
+
+
+
+
+  </div>
 
   <address>Made 4 June 2023<br>
     by Group 0509</address>
