--- a/misc/ethics.html
+++ b/misc/ethics.html
@@ -19,15 +19,14 @@
 	  <a href="ethics.html">Ethical Reflections</a>
 	  <a href="references.html">References</a>
 	 <a href="process.html">Process Support</a>
+	 <a href="proposal.html">Topic Proposal</a>
   </nav>
   </div>
 
 </body>
 <!-- Main content -->
+<div class="container">
 <h1>Ethical Issues and Reflections</h1>
-
-
-</ul><h4><p>Ethical issues relating to the technology, your personal reflections and recommendations [Individual].<p></h4>
 
 <table>
     <p>
@@ -46,37 +45,34 @@
 	
 	<p align = "left"</p>
 	<tr><th scope="row">Team Member 1</th>
-		<td>a</td>
-		<td>b</td>
-        <td>1</td>	
+		<td>King</td>
+		<td>Aidan</td>
+        <td>22176443</td>	
 		<td>h</td>
    </tr>
 	<p align = "left"</p>
 	<tr><th scope="row">Team Member 2</th>
-        <td>c</td>
-		<td>d</td>
-        <td>3</td>	
+        <td>Sara</td>
+		<td>Khalaf</td>
+        <td>15906632</td>	
 		<td>h</td>
     </tr>
 	<p align = "left"</p>
 	<tr><th scope="row">Team Member 3</th>
-        <td>e</td>
-		<td>f</td>
-        <td>5</td>
+        <td>Salman</td>
+		<td>Tahir</td>
+        <td>21135903</td>
 		<td>h</td>
     </tr>
 	</body>  
 </table>
 <hr/>
 
-<p><h6><em>Note: the preferred option will be to fill in the cells in your site with 'hard coded' details in this form(between each cell ('td' = "table data" element) in a row, and email the link to your TA when completed.</p></h6></em> 
-
-
-<h5>Link to page or area in the team discussion board or your Personal Repository [you can make this private if you wish]: </h5>
-<a href="https://canvas.aut.ac.nz/groups/36051">Portfolio Repository Individual [Your Team and Individual Name] Link</a>      
+<h5>Link to group Repository: <a href=https://github.com/AidanKing04/Assignment3.github.io>Portfolio Repository: Group 0509</a>  </h5>
+    
 
   <hr/>
-<p><h6><em>Note: you can replace the Link to Canvas Comp501 with a'hard coded' link to your personal repository in this form or equivalent.</p></h6></em> 
+</div>
 
 <address>Made 4 June 2023<br>
 	by Group 0509</address>
