--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<a href="misc/references.html">References</a>
    <a href="misc/process.html">Process Support</a>
    <a href="misc/proposal.html">Topic Proposal</a>
+   <a href="misc/portfolio.html">Portfolio</a>
 
   </nav>
 </div>
