--- a/misc/portfolio.html
+++ b/misc/portfolio.html
@@ -2,19 +2,29 @@
 <html>
 <head>
   <title>portfolio</title>
-   	<link rel="stylesheet" href="../styles/minimal-table.css" type="text/css">
+   	<link rel="stylesheet" href="../styles/mystyles.css" type="text/css">
 </head>
 
 <body>
 <!-- Site navigation menu -->
-<ul class="navbar">
-	<li><a href="../index.html">Home</a>
-   	<li><a href="https://www.dropbox.com/sh/mjyajw349thbj61/AAAAGNBVWF_0VHEPafZjLaHPa/00%20Videos%20of%20Lectures%20S1%202020?dl=0&subfolder_nav_tracking=1">Project Portfolio</a>
-	<li><a href="process.html">Process Support</a>
-	</ul>
+<div class="navbar-container">
+	<nav>
+  <!-- Site navigation menu -->
+	<a href="../index.html">Home page</a>
+	<a href="topic.html">Technology/Topic</a>
+	  <a href="opportunities.html">Opportunities</a>
+	  <a href="risks.html">Risks</a>
+	  <a href="choices.html">Choices</a>
+	  <a href="ethics.html">Ethical Reflections</a>
+	  <a href="references.html">References</a>
+	 <a href="process.html">Process Support</a>
+	 <a href="proposal.html">Topic Proposal</a>
+	 <a href="portfolio.html">Portfolio</a>
+  
+	</nav>
+  </div>
 
-
-
+  <div class="container">
 
 <h1>Project Portfolio</h1><br>
 
@@ -30,5 +40,6 @@
 
 <hr/>
 <p><h6><em>Note: the preferred option will be to replace these links in your site with equivalent links to your repository e.g. Canvas Discussion Board or dropbox site pages or equivalent</h6></em></p>
+</div>
 </body>
 </html>
