changes to code

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
 <head>
-  <title>My first styled page</title>
+  <title>Home</title>
   	<link rel="stylesheet" href="styles/mystyles.css">
   </head>
 
@@ -16,11 +16,11 @@
 	<a href="misc/choices.html">Choices</a>
 	<a href="misc/ethics.html">Ethical Reflections</a>
 	<a href="misc/references.html">References</a>
-   <a href="misc/process.html">Process Support</a>
    <a href="misc/proposal.html">Topic Proposal</a>
    <a href="misc/portfolio.html">Portfolio</a>
-
-  </nav>
+   <a href="misc/meetings.html">Meetings</a>
+   <a href="misc/team-formation.html">Team formation</a>
+</nav>
 </div>
 <!-- Main content -->
 
