--- a/misc/ethics.html
+++ b/misc/ethics.html
@@ -11,6 +11,7 @@
 
 <div class="navbar-container">
 	<nav>
+  <!-- Site navigation menu -->
 	<a href="../index.html">Home page</a>
 	<a href="topic.html">Technology/Topic</a>
 	  <a href="opportunities.html">Opportunities</a>
@@ -18,8 +19,10 @@
 	  <a href="choices.html">Choices</a>
 	  <a href="ethics.html">Ethical Reflections</a>
 	  <a href="references.html">References</a>
-	 <a href="process.html">Process Support</a>
 	 <a href="proposal.html">Topic Proposal</a>
+	 <a href="portfolio.html">Portfolio</a>
+	 <a href="meetings.html">Meetings</a>
+	 <a href="team-formation.html">Team formation</a>
   </nav>
   </div>
 
@@ -55,7 +58,7 @@
         <td>Sara</td>
 		<td>Khalaf</td>
         <td>15906632</td>	
-		<td>h</td>
+		<td>Submitted Individually through canvas submission.</td>
     </tr>
 	<p align = "left"</p>
 	<tr><th scope="row">Team Member 3</th>
