--- a/misc/meetings.html
+++ b/misc/meetings.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
 <head>
-  <title>guidelines</title>
-   	<link rel="stylesheet" href="../styles/minimal-table.css" type="text/css">
+  <title>meetings</title>
+   	<link rel="stylesheet" href="../styles/mystyles.css" type="text/css">
 </head>
 
 <body>
 <!-- Site navigation menu -->
-<ul class="navbar">
-	<li><a href="../index.html">Home</a>
-   	<li><a href="https://www.dropbox.com/sh/mjyajw349thbj61/AAAAGNBVWF_0VHEPafZjLaHPa/00%20Videos%20of%20Lectures%20S1%202020?dl=0&subfolder_nav_tracking=1">Meeting Minutes</a>
-	<li><a href="process.html">Process Support</a>
-	</ul>
+<div class="navbar-container">
+	<nav>
+  <!-- Site navigation menu -->
+	<a href="../index.html">Home page</a>
+	<a href="topic.html">Technology/Topic</a>
+	  <a href="opportunities.html">Opportunities</a>
+	  <a href="risks.html">Risks</a>
+	  <a href="choices.html">Choices</a>
+	  <a href="ethics.html">Ethical Reflections</a>
+	  <a href="references.html">References</a>
+	 <a href="proposal.html">Topic Proposal</a>
+	 <a href="portfolio.html">Portfolio</a>
+	 <a href="meetings.html">Meetings</a>
+	 <a href="team-formation.html">Team formation</a>
+  </nav>
+  </div>
 
 
 
