--- a/misc/portfolio.html
+++ b/misc/portfolio.html
@@ -17,29 +17,27 @@
 	  <a href="choices.html">Choices</a>
 	  <a href="ethics.html">Ethical Reflections</a>
 	  <a href="references.html">References</a>
-	 <a href="process.html">Process Support</a>
 	 <a href="proposal.html">Topic Proposal</a>
 	 <a href="portfolio.html">Portfolio</a>
-  
-	</nav>
+	 <a href="meetings.html">Meetings</a>
+	 <a href="team-formation.html">Team formation</a>
+  </nav>
   </div>
 
   <div class="container">
 
-<h1>Project Portfolio</h1><br>
+<h1>Project Portfolio</h1>
 
 
-<h4><p>Team name ____________________________________________________</p></h4>
+<h2><p>Team name: Group 0509</p></h2>
 
-<h4><p>Team Coordinator/Leader ______________________________________</p></h4>
 		
 
-  <a href="https://teams.microsoft.com/l/channel/19%3a27f2d1a5f562424bb967cac271b88c1e%40thread.tacv2/General?groupId=8f7b11f2-0954-417c-b54d-937ed1e585e2&tenantId=5e022ca1-5c04-4f87-8db7-d588726274e3">Portfolio Repository Alternative Link</a>      
+<h2><a href=https://github.com/AidanKing04/Group0509-Assignment3.github.io>Portfolio Repository: Group 0509</a></h2>    
 
   
 
-<hr/>
-<p><h6><em>Note: the preferred option will be to replace these links in your site with equivalent links to your repository e.g. Canvas Discussion Board or dropbox site pages or equivalent</h6></em></p>
+	
 </div>
 </body>
 </html>
