--- a/misc/process.html
+++ b/misc/process.html
@@ -16,6 +16,7 @@
 
   <div class="navbar-container">
     <nav>
+  <!-- Site navigation menu -->
     <a href="../index.html">Home page</a>
     <a href="topic.html">Technology/Topic</a>
     <a href="opportunities.html">Opportunities</a>
@@ -23,10 +24,12 @@
     <a href="choices.html">Choices</a>
     <a href="ethics.html">Ethical Reflections</a>
     <a href="references.html">References</a>
-     <a href="process.html">Process Support</a>
      <a href="proposal.html">Topic Proposal</a>
-     </div>
-    </nav
+     <a href="portfolio.html">Portfolio</a>
+     <a href="meetings.html">Meetings</a>
+     <a href="team-formation.html">Team formation</a>
+  </nav>
+  </div>
    
 </ul><p>This mock-up site is intended to support your team project so you can take this as a set of files and as a starting point and adapt it to your preference.</p>
 <p>It is built on a W3C site tutorial so does not claim to be flash, but now has an image, not well presented, but at least the site uses HTML and has been styled with CSS &hellip;</p>
