--- a/misc/references.html
+++ b/misc/references.html
@@ -11,6 +11,7 @@
 
 <div class="navbar-container">
   <nav>
+<!-- Site navigation menu -->
   <a href="../index.html">Home page</a>
   <a href="topic.html">Technology/Topic</a>
 	<a href="opportunities.html">Opportunities</a>
@@ -18,9 +19,12 @@
 	<a href="choices.html">Choices</a>
 	<a href="ethics.html">Ethical Reflections</a>
 	<a href="references.html">References</a>
-   <a href="process.html">Process Support</a>
-   </div>
-  </nav>
+   <a href="proposal.html">Topic Proposal</a>
+   <a href="portfolio.html">Portfolio</a>
+   <a href="meetings.html">Meetings</a>
+   <a href="team-formation.html">Team formation</a>
+</nav>
+</div>
   <div class="container">
 <!-- Main content -->
 <h1>References</h1>
