--- a/misc/team-formation.html
+++ b/misc/team-formation.html
@@ -1,70 +1,81 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
 <head>
-  <title>Peer Evaluation Form</title>
-   	<link rel="stylesheet" href="../styles/minimal-table.css" type="text/css">
+  <title>team formation</title>
+   	<link rel="stylesheet" href="../styles/mystyles.css" type="text/css">
 </head>
 
 <body>
 <!-- Site navigation menu -->
-<ul class="navbar">
-  <li><a href="../index.html">Home</a>
-  <li><a href="process.html">Process Support</a>
-</ul>
+<div class="navbar-container">
+    <nav>
+  <!-- Site navigation menu -->
+    <a href="../index.html">Home page</a>
+    <a href="topic.html">Technology/Topic</a>
+      <a href="opportunities.html">Opportunities</a>
+      <a href="risks.html">Risks</a>
+      <a href="choices.html">Choices</a>
+      <a href="ethics.html">Ethical Reflections</a>
+      <a href="references.html">References</a>
+     <a href="proposal.html">Topic Proposal</a>
+     <a href="portfolio.html">Portfolio</a>
+     <a href="meetings.html">Meetings</a>
+     <a href="team-formation.html">Team formation</a>
+  </nav>
+  </div>
 
 
 
+  <div class="container">
+<h1>Team Formation Form</h1>
 
-<h1>Team Formation Form</h1><br>
+<h4>Due Date: Friday 9th June  </h4>
 
-<h4>Due Date:  Advised on Canvas  </h4><p><em>(Team coordinator to confirm team have met with your TA)</em></p> 
-
-<h4><p>Team name ____________________________________________________</p></h4>
-
-<h4><p>Team coordinator/Leader ______________________________________</p></h4>
+<h4>Team name: Group 0509</h4>
 		
 <table>
     <p>
-	<body ><th>Team Member Details</th>
+	<body>
+	
+	<tr><th>Team Member Details</th>
     
         
         <th scope="col" class="last name">Last Name</th> 
 	    <th scope="col" class="first name">First Name</th> 
-        <th scope="col" class="id">Student ID</th> 
-		
+        <th scope="col" class="id">Student ID</th> 	
+
     </tr>
 	<hr />
 	</p>
 	
 	<p align = "left"</p>
-		<th scope="row">Team Member 1</th>
-		<td></td>
-		<td></td>
-        <td></td>
-		
+	<tr><th scope="row">Team Member 1</th>
+		<td>King</td>
+		<td>Aidan</td>
+        <td>22176443</td>	
+
    </tr>
 	<p align = "left"</p>
-	<th scope="row">Team Member 2</th>
-        <td></td>
-		<td></td>
-        <td></td>
-		
- 
+	<tr><th scope="row">Team Member 2</th>
+        <td>Sara</td>
+		<td>Khalaf</td>
+        <td>15906632</td>	
+
     </tr>
-	<th scope="row">Team Member 3</th>
-        <td></td>
-		<td></td>
-        <td></td>
-		
-  
+	<p align = "left"</p>
+	<tr><th scope="row">Team Member 3</th>
+        <td>Salman</td>
+		<td>Tahir</td>
+        <td>21135903</td>
+
     </tr>
-	
-  
+	</body>  
 </table>
 
 
 <hr/>
-<p><h6><em>Note: These details will be provided via your group on Canvas, but here the preferred option will be to fill in the cells in your site with 'hard coded' details in this form(between each cell ('td' = "table data" element) in a row, and email the link to your TA when completed.  Think of this site as a work in progress.</p></h6></em> 
 
+
+</div>
 </body>
 </html>
