--- a/misc/proposal.html
+++ b/misc/proposal.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
 <head>
-  <title>"proposal" </title>
+  <title>proposal</title>
   	<link rel="stylesheet" href="../styles/mystyles.css">
   </head>
 
@@ -11,6 +11,7 @@
 
 <div class="navbar-container">
 	<nav>
+  <!-- Site navigation menu -->
 	<a href="../index.html">Home page</a>
 	<a href="topic.html">Technology/Topic</a>
 	  <a href="opportunities.html">Opportunities</a>
@@ -18,9 +19,12 @@
 	  <a href="choices.html">Choices</a>
 	  <a href="ethics.html">Ethical Reflections</a>
 	  <a href="references.html">References</a>
-	 <a href="process.html">Process Support</a>
 	 <a href="proposal.html">Topic Proposal</a>
-	 </div>
+	 <a href="portfolio.html">Portfolio</a>
+	 <a href="meetings.html">Meetings</a>
+	 <a href="team-formation.html">Team formation</a>
+  </nav>
+  </div>
 
 	 <div class="container">
 <!-- Main content -->
